--- a/gradle.properties
+++ b/gradle.properties
@@ -56,4 +56,4 @@ mod_group_id=ru.hoprik.miroengine
 # The authors of the mod. This is a simple text string that is used for display purposes in the mod list.
 mod_authors=Hoprik
 # The description of the mod. This is a simple multiline text string that is used for display purposes in the mod list.
-mod_description=Small story engine
+mod_description=Story engine
